Fix autosuggest z-index bug.

--- a/src/less/blocks/autosuggest.less
+++ b/src/less/blocks/autosuggest.less
@@ -27,7 +27,7 @@
     background-color: #fff;
     border-bottom-left-radius: @border-radius;
     border-bottom-right-radius: @border-radius;
-    z-index: 2;
+    z-index: 1000;
   }
 
   &__section {
